# esp-adf-libs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Kconfig.projbuild  component.mk  idf_component.yml
esp_audio_codec/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
esp_audio_codec/include/: esp_amrnb_enc.h  esp_amrwb_enc.h  esp_audio_codec_version.h  esp_audio_types.h  esp_sbc_def.h
esp_audio_codec/include/decoder/: esp_audio_dec.h  esp_audio_dec_default.h  esp_audio_dec_reg.h
esp_audio_codec/include/decoder/impl/: esp_aac_dec.h  esp_adpcm_dec.h  esp_alac_dec.h  esp_amrnb_dec.h  esp_amrwb_dec.h  esp_flac_dec.h  esp_g711_dec.h  esp_g722_dec.h  esp_lc3_dec.h  esp_mp3_dec.h  esp_opus_dec.h  esp_pcm_dec.h  esp_sbc_dec.h  esp_vorbis_dec.h
esp_audio_codec/include/encoder/: esp_audio_enc.h  esp_audio_enc_default.h  esp_audio_enc_reg.h
esp_audio_codec/include/encoder/impl/: esp_aac_enc.h  esp_adpcm_enc.h  esp_alac_enc.h  esp_amrnb_enc.h  esp_amrwb_enc.h  esp_g711_enc.h  esp_g722_enc.h  esp_lc3_enc.h  esp_opus_enc.h  esp_pcm_enc.h  esp_sbc_enc.h
esp_audio_codec/include/simple_dec/: esp_audio_simple_dec.h  esp_audio_simple_dec_default.h  esp_audio_simple_dec_reg.h  esp_es_parse_types.h
esp_audio_codec/include/simple_dec/impl/: esp_m4a_dec.h  esp_m4a_parse.h  esp_ogg_dec.h  esp_ogg_parse.h  esp_ts_dec.h  (+3 more)
esp_audio_codec/src/: audio_decoder_reg.c  audio_encoder_reg.c  simple_decoder_reg.c
esp_audio_codec/test_apps/audio_codec_test/: CMakeLists.txt  install.sh  partition_table_unit_test_app.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
esp_audio_effects/test_app/main/: CMakeLists.txt  Kconfig.projbuild  ae_common.c  ae_common.h  analyze_rate_cvt_output.py  idf_component.yml  output.txt  rate_cvt_test.py  sonic_test.py  test_ae_performance.c  test_alc.c  test_audio_effect_main.c  test_bit_cvt.c  test_ch_cvt.c  test_common.c  test_common.h  test_data_weaver.c  test_delay.c  test_drc.c  test_eq.c  test_fade.c  test_howl.c  test_mbc.c  test_mixer.c  test_rate_cvt.c  test_results.xlsx  test_reverb.c  test_sonic.c
esp_extractor/: CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  README_CN.md  ffmpeg_mjpeg.patch  idf_component.yml
esp_extractor/examples/extractor_test/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults
esp_extractor/include/: esp_extractor.h  esp_extractor_ctrl.h  esp_extractor_defaults.h  esp_extractor_id3_parser.h  esp_extractor_types.h  esp_extractor_version.h
esp_extractor/include/impl/: esp_audio_es_extractor.h  esp_avi_extractor.h  esp_caf_extractor.h  esp_flv_extractor.h  esp_mp4_extractor.h  esp_ogg_extractor.h  esp_raw_extractor.h  esp_ts_extractor.h  esp_wav_extractor.h
esp_extractor/include/reg/: data_cache.h  esp_extractor_reg.h  mem_pool.h
esp_extractor/src/: esp_extractor_id3_parser.c  esp_extractor_reg.c  extractor_sys.c
esp_h264/: CMakeLists.txt  README.md  idf_component.yml
esp_h264/include/: esp_h264_enc.h  esp_h264_types.h  esp_h264_version.h
esp_hls_stream/: CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
esp_hls_stream/examples/hls_live_stream/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
esp_hls_stream/include/: esp_hls_extractor.h  esp_hls_helper.h  esp_hls_io.h  esp_hls_types.h
esp_hls_stream/private_inc/: hls_fetcher.h
esp_hls_stream/src/: hls_helper.c  hls_io.c  hls_io_helper.c
esp_image_effects/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml
esp_image_effects/doc/: PERFORMANCE_ESP32P4.md
esp_image_effects/include/: esp_imgfx_color_convert.h  esp_imgfx_crop.h  esp_imgfx_rotate.h  esp_imgfx_scale.h  esp_imgfx_types.h  esp_imgfx_version.h
esp_image_effects/test_app/: pytest_esp_image_process.py
esp_image_effects/test_app/main/: CMakeLists.txt  color_convert.c  color_convert.h  idf_component.yml  image_io.c  image_io.h  img_crop.c  img_crop.h  img_rotate.c  img_rotate.h  img_scale.c  img_scale.h  pixel_fmt.c  rgb_image_gen.c  rgb_image_gen.h  test_app_main.c  test_case.c
esp_libsrtp/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
esp_libsrtp/esp-port/: config.h
esp_media_protocols/test_apps/main/: CMakeLists.txt  idf_component.yml  test_app_main.c  test_case.c
esp_midi/test_app/main/: CMakeLists.txt  idf_component.yml  midi_io.c  midi_io.h  test_app_main.c  test_case.c
esp_muxer/: CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
esp_muxer/examples/video_muxer/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults
esp_muxer/include/: caf_muxer.h  esp_muxer.h  esp_muxer_default.h  esp_muxer_err.h  esp_muxer_version.h  flv_muxer.h  mp4_muxer.h  ogg_muxer.h  ts_muxer.h  wav_muxer.h
esp_muxer/include/impl/: avi_muxer.h  caf_muxer.h  flv_muxer.h  mp4_muxer.h  ogg_muxer.h  ts_muxer.h  wav_muxer.h
esp_muxer/src/: muxer_reg.c
esp_muxer/test_apps/muxer_test/: CMakeLists.txt  install.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s3
esp_video_codec/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp_video_codec/docs/: Doxyfile
esp_video_codec/inc/: video_codec_utils.h
esp_video_codec/include/: esp_video_codec_types.h  esp_video_codec_utils.h  esp_video_codec_version.h
esp_video_codec/include/decoder/: esp_video_dec.h  esp_video_dec_default.h  esp_video_dec_reg.h
esp_video_codec/include/encoder/: esp_video_enc.h  esp_video_enc_default.h  esp_video_enc_reg.h
esp_video_codec/src/: esp_video_codec_version.c  esp_video_dec.c  esp_video_dec_default.c  esp_video_enc.c  esp_video_enc_default.c  video_codec_reg.c  video_codec_utils.c
esp_video_codec/src/decoder/: esp_video_dec_mjpeg.c  esp_video_dec_sw_h264.c  esp_video_dec_sw_mjpeg.c
esp_video_codec/src/encoder/: esp_video_enc_h264.c  esp_video_enc_mjpeg.c  esp_video_enc_sw_h264.c  esp_video_enc_sw_mjpeg.c
esp_video_codec/test_apps/video_codec_test/: CMakeLists.txt  sdkconfig.defaults
media_lib_sal/test_apps/main/: CMakeLists.txt  idf_component.yml  test_app_main.c  test_media_lib_sal.c
(+397 files in other folders)
